--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "repository": "https://github.com/MrNovado/xstate-gentype-proof.git",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "gen-simple": "node gentype/simple.gentype.js"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
