event enum + simple react example

--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "gen-simple": "node gentype/simple.gentype.js"
   },
   "devDependencies": {
+    "@types/react-dom": "^16.9.5",
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@xstate/react": "^0.8.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "xstate": "^4.8.0"
   }
 }
